    - fix FTBFS on latest vte (closes: #597384)
  * common/rpackagecache.{cc,h}, common/rpackage.cc:
    - add cache for PkgFileIterator->pkgIndexFile* to speed up
      RPackage::IsTrusted (LP: #165181)
  * gtk/rgdebinstallprogress.cc:
    - merge fix for error string if those contain a ":" 
      (LP: #600658), thanks to Jonathan Thomas and Jean-Baptiste Lallement 
  * When sorting by support status use STL stable_parition to speed
    up the list view (thanks to David Purcell)
  
   [ Jean-Baptiste Lallement ]
   * gtk/rgdebinstallprogress.{cc,h}: Terminal shortcuts fixes
     - fix <CTRL><SHIFT>c behavior (LP: #250359)
     - add shortcuts <CTRL>a and <CTRL><SHIFT>a to select all/none text
       in the terminal
     - add contextual menu to the terminal to select all and copy text
       (LP: #31396)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 23 Aug 2010 10:27:49 +0200

synaptic (0.70~pre1) unstable; urgency=low

  * New upstream release that merges all changes from 
    Debian and Ubuntu into a single tree again. This include libept 
    support and lots of fixes.
  * po/sl.po:
    - updated, thanks to Matej Urbančič 
  * po/pt_BR.po:
    - updatd, thanks to Sergio Cipolla, closes: #579296
  * gtk/rgmainwindow.cc:
    - fix hang when applying the preferences (LP: #172487)
  * po/th.po:
    - updated, thanks to Theppitak Karoonboonyanan
      (closes: #592696)
  * pre-build.sh:
    - ensure version number gets updated on build

 -- Michael Vogt <mvo@debian.org>  Thu, 12 Aug 2010 17:37:18 +0200

synaptic (0.63.2) unstable; urgency=low

  [ Michael Vogt ]
  * po/uk.po:
    - updated, thanks to Serhij Dubyk 
  * po/it.po:
    - updated, thanks to Milo Casagrande  (closes: #575685)
  * po/et.po:
    - added, thanks to G. Tabbernuk
  
  [ Bilal Akhtar ]
  * gtk/rgmainwindow.cc
    - Modify gtk/rgmainwindow.cc to populate package list again after 
     'Unmark All' is selected. (LP: #155930)
  
  [ Jean-Baptiste Lallement ]